# AI-STUDY-BUDDY-HACK2

./: .env.example  .replit  PITCHDECK  PROJECT_SETUP.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  run_backend.py  run_combined.sh  run_python_backend.py  start_backend.sh  tailwind.config.ts  test_backend.py  tsconfig.json
client/src/: App.tsx  index.css
client/src/components/: MoodSelector.tsx  Navigation.tsx  StudyJournal.tsx
client/src/pages/: Dashboard.tsx  Flashcards.tsx  Index.tsx  PitchDeck.tsx  QuizGeneration.tsx
python_backend/: __init__.py  database.py  main.py  models.py  requirements.txt  start_server.py  supabase_schema.sql
python_backend/routes/: __init__.py  ai.py  auth.py  flashcards.py  progress.py  quizzes.py  study_guides.py
python_backend/services/: __init__.py  ai_service.py
src/: App.tsx  index.css
src/components/: Navigation.tsx
src/pages/: Dashboard.tsx  Flashcards.tsx  Index.tsx  Progress.tsx  StudyGuide.tsx  StudyJournalPage.tsx
